--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agri-Sacco - Sustainable Farming and Market Dynamics</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="frontend/ASSETS/css/style.css">
+  <link rel="stylesheet" href="../ASSETS/css/style.css">
 </head>
 <body>
   <!-- Header -->
