--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -28,7 +28,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero" style="background-image: url('assets/images/hero-bg.jpg'); background-size: cover; height: 600px; display: flex; align-items: center; color: white; position: relative;">
+  <section class="hero" style="background-image: url('/frontend/ASSETS/images/WhatsApp\ Image\ 2025-03-06\ at\ 11.42.50_da6e377e.jpg'); background-size: cover; height: 600px; display: flex; align-items: center; color: white; position: relative;">
     <div style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.6);"></div>
     <div class="container" style="position: relative; z-index: 1;">
       <div style="max-width: 600px;">
@@ -271,7 +271,7 @@
       <div style="display: flex; flex-wrap: wrap; gap: 2rem; margin-bottom: 2rem;">
         <div class="card" style="flex: 1; min-width: 300px; display: flex; flex-direction: column;">
           <div style="text-align: center; margin-bottom: 1.5rem;">
-            <img src="assets/images/farmer1.jpg" alt="John Kamau" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;">
+            <img src="/frontend/ASSETS/images/WhatsApp Image 2025-03-06 at 11.42.52_b5ebc2e2.jpg" alt="John Kamau" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;">
           </div>
           <blockquote style="flex: 1; font-style: italic; margin-bottom: 1.5rem;">
             "With the agricultural loan I received from Agri-Sacco, I was able to invest in better quality seeds and irrigation equipment. My crop yield has increased by 40% and I've been able to connect with direct buyers through the marketplace."
@@ -283,7 +283,7 @@
         </div>
         <div class="card" style="flex: 1; min-width: 300px; display: flex; flex-direction: column;">
           <div style="text-align: center; margin-bottom: 1.5rem;">
-            <img src="assets/images/farmer2.jpg" alt="Mary Odhiambo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;">
+            <img src="/frontend/ASSETS/images/WhatsApp Image 2025-03-06 at 11.42.49_2d470a67.jpg" alt="Mary Odhiambo" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;">
           </div>
           <blockquote style="flex: 1; font-style: italic; margin-bottom: 1.5rem;">
             "The resource sharing platform has been a game-changer for me. I was able to use a tractor during planting season that I could never afford to buy on my own. The expert consultation also helped me deal with a pest problem that was affecting my crops."
@@ -295,7 +295,7 @@
         </div>
         <div class="card" style="flex: 1; min-width: 300px; display: flex; flex-direction: column;">
           <div style="text-align: center; margin-bottom: 1.5rem;">
-            <img src="assets/images/farmer3.jpg" alt="David Mwangi" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;">
+            <img src="/frontend/ASSETS/images/WhatsApp Image 2025-03-11 at 14.44.21_006c1643.jpg" alt="David Mwangi" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;">
           </div>
           <blockquote style="flex: 1; font-style: italic; margin-bottom: 1.5rem;">
             "I've been saving towards buying a dairy cow through the goal-based savings program. The mobile banking feature makes it easy to deposit money from anywhere, even from my farm. The community forum has also been an excellent source of knowledge on dairy farming practices."
