added files under pages, components and js

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -37,7 +37,7 @@
         <h1 style="font-size: 2.5rem; margin-bottom: 1rem;">Sustainable Farming and Market Dynamics</h1>
         <p style="font-size: 1.2rem; margin-bottom: 2rem;">A holistic management system for agricultural Sacco development that connects farmers, resources, and markets.</p>
         <div style="display: flex; gap: 1rem;">
-          <a href="pages/register.html" class="btn btn-large">Join Our Sacco</a>
+          <a href="registration.html" class="btn btn-large">Join Our Sacco</a>
           <a href="#features" class="btn btn-outline btn-large">Learn More</a>
         </div>
       </div>
@@ -366,6 +366,6 @@
     </div>
   </footer>
 
-  <script src="assets/js/main.js"></script>
+  <script src="ASSETS/js/main.js"></script>
 </body>
 </html>
