--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Agri-Sacco</title>
+  <title>Login - AgriBundance</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="../ASSETS/css/style.css">
 </head>
@@ -12,7 +12,8 @@
     <div class="auth-card">
       <div class="auth-logo">
         <a href="../index.html" style="display: flex; align-items: center; justify-content: center; color: var(--primary-color); font-size: 1.8rem; font-weight: bold;">
-          <i class="fas fa-seedling" style="margin-right: 10px;"></i> Agri-Sacco
+          
+          <img src="/frontend/ASSETS/images/WhatsApp Image 2025-02-21 at 23.37.06_62330f14.jpg" alt="Logo" style="height: 30px; margin-right: 10px;"> AgriBundance
         </a>
       </div>
       <h2 class="auth-title">Login to Your Account</h2>
