--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -73,8 +73,8 @@
     <div class="sidebar">
       <div class="sidebar-header">
         <div id="sidebarUserInitials" style="width: 60px; height: 60px; border-radius: 50%; background-color: var(--primary-color); color: white; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; margin: 0 auto 10px;">JD</div>
-        <h3 id="sidebarUserName">John Doe</h3>
-        <p id="membershipId" style="color: var(--text-light); font-size: 0.8rem;">Member ID: #12345</p>
+        <h3 id="sidebarUserName"></h3>
+        <p id="membershipId" style="color: var(--text-light); font-size: 0.8rem;"></p>
       </div>
       <div class="sidebar-menu">
         <div class="sidebar-menu-item">
