--- a/frontend/pages/members.html
+++ b/frontend/pages/members.html
@@ -426,6 +426,88 @@
         window.location.href = 'login.html';
       });
     });
+
+// Example: In a members.js file that you include in members.html
+document.addEventListener('DOMContentLoaded', function() {
+  // Check if user is logged in (token exists)
+  const token = localStorage.getItem('token');
+  if (!token) {
+      window.location.href = 'login.html'; // Redirect to login if not authenticated
+      return;
+  }
+
+  // Fetch member data
+  fetchMembers();
+});
+
+async function fetchMembers() {
+  try {
+      const response = await fetch('api/members', {
+          method: 'GET',
+          headers: {
+              'Authorization': `Bearer ${localStorage.getItem('token')}`,
+              'Content-Type': 'application/json'
+          }
+      });
+
+      if (!response.ok) {
+          throw new Error('Failed to fetch members');
+      }
+
+      const data = await response.json();
+      displayMembers(data.data.members);
+  } catch (error) {
+      console.error('Error fetching members:', error);
+      showErrorMessage('Unable to load members. Please try again later.');
+  }
+}
+
+function displayMembers(members) {
+  const membersTableBody = document.querySelector('#members-table tbody');
+  
+  // Clear existing content
+  membersTableBody.innerHTML = '';
+  
+  if (members.length === 0) {
+      membersTableBody.innerHTML = '<tr><td colspan="5" class="text-center">No members found</td></tr>';
+      return;
+  }
+  
+  // Add members to the table
+  members.forEach(member => {
+      const row = document.createElement('tr');
+      row.innerHTML = `
+          <td>${member.memberId}</td>
+          <td>${member.firstName} ${member.lastName}</td>
+          <td>${member.email}</td>
+          <td>${member.phoneNumber}</td>
+          <td>
+              <span class="status ${member.accountStatus}">${member.accountStatus}</span>
+          </td>
+          <td>
+              <button class="btn-action view" data-id="${member._id}">View</button>
+              <button class="btn-action edit" data-id="${member._id}">Edit</button>
+          </td>
+      `;
+      membersTableBody.appendChild(row);
+  });
+  
+  // Add event listeners to the buttons
+  document.querySelectorAll('.btn-action.view').forEach(button => {
+      button.addEventListener('click', function() {
+          const memberId = this.getAttribute('data-id');
+          viewMemberDetails(memberId);
+      });
+  });
+  
+  document.querySelectorAll('.btn-action.edit').forEach(button => {
+      button.addEventListener('click', function() {
+          const memberId = this.getAttribute('data-id');
+          editMember(memberId);
+      });
+  });
+}
+
   </script>
 </body>
 </html>
