added css styles to the admin and agricultural expert page

--- a/frontend/pages/Admindashboard.html
+++ b/frontend/pages/Admindashboard.html
@@ -12,8 +12,8 @@
         <!-- Sidebar Navigation -->
         <aside class="sidebar">
             <div class="logo">
-                <img src="images/sacco-logo.png" alt="Sacco Logo">
-                <h2>AgriSacco</h2>
+                <img src="/frontend/ASSETS/images/WhatsApp Image 2025-03-26 at 23.11.24_0f7351a3.jpg" alt="Sacco Logo">
+                <h2>AgriBundance</h2>
             </div>
             <nav class="side-nav">
                 <ul>
@@ -44,7 +44,7 @@
                 </ul>
             </nav>
             <div class="admin-profile">
-                <img src="images/admin-avatar.png" alt="Admin">
+                <img src="/frontend/ASSETS/images/WhatsApp Image 2025-03-26 at 23.28.53_cb47985c.jpg" alt="Admin">
                 <div>
                     <h4>Admin Name</h4>
                     <a href="#logout">Logout</a>
