--- a/frontend/pages/agriculturalexpert.html
+++ b/frontend/pages/agriculturalexpert.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agricultural Expert Dashboard | AgriSacco</title>
+    <title>Agricultural Expert Dashboard | AgriBundance</title>
     <link rel="stylesheet" href="../ASSETS/css/agriculturalexpert.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -12,8 +12,8 @@
         <!-- Sidebar Navigation -->
         <aside class="sidebar">
             <div class="logo">
-                <img src="images/sacco-logo.png" alt="Sacco Logo">
-                <h2>AgriSacco</h2>
+                <img src="/frontend/ASSETS/images/WhatsApp Image 2025-03-26 at 23.11.24_0f7351a3.jpg" alt="Sacco Logo">
+                <h2>AgriBundance</h2>
             </div>
             <nav class="side-nav">
                 <ul>
